docker-kubernetes-deployments/redis-deployments/redis-commander/redis-commander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander:latest
          ports:
            - containerPort: 8081
          resources: # Figure out with the limits later.
            limits:
              memory: '512Mi'
              cpu: '500m'
