docker-kubernetes-deployments/redis-deployments/redis-commander/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: redis
spec:
  selector:
    app: redis-commander
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP
